# deebe

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.in  NEWS  README  README.osx  bootstrap.sh  config.h.in  config.sub  configure  configure.ac
include/: breakpoint.h  cmdline.h  delf.h  dptrace.h  dsignal.h  gdb-aarch64.h  gdb-arm.h  gdb-ppc.h  gdb-x86.h  gdb-x86_64.h  gdb_interface.h  global.h  lldb_interface.h  macros.h  memory.h  network.h  packet.h  process_info.h  regmacros.h  target.h  target_ptrace.h  thread_db_priv.h  util.h  version.h  watchdog.h
os/: freebsd.h  linux.h  netbsd.h  osx.h
src/: Makefile.am  Makefile.in  breakpoint.c  bsd-arm.c  cmdline.c  elf.c  freebsd-arm.c  freebsd-common-x86.c  freebsd-mips.c  freebsd-ppc.c  freebsd-proc.c  freebsd-x86.c  freebsd-x86_64.c  freebsd.c  gdb_interface.c  host-freebsd.c  host-linux.c  host-osx.c  linux-aarch64.c  linux-arm.c  linux-common-x86.c  linux-mips.c  linux-ppc.c  linux-thread_db.c  linux-x86.c  linux-x86_64.c  linux.c  lldb_interface.c  main.c  memory.c  netbsd-arm.c  network.c  osx-x86_64.c  osx.c  packet.c  proc.c  process_info.c  ptrace.c  signal.c  target.c  (+7 more)
xcode/deebe/deebe.xcodeproj/: project.pbxproj
xcode/deebe/deebe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/deebe/deebe.xcodeproj/project.xcworkspace/xcuserdata/trix.xcuserdatad/: UserInterfaceState.xcuserstate
